[gd_scene load_steps=10 format=2]

[ext_resource path="res://Structures/Dummy/dummy.png" type="Texture" id=1]
[ext_resource path="res://Effects/Shaders/outline_and_hit.shader" type="Shader" id=2]
[ext_resource path="res://Control/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Structures/Dummy/TargetDummy.gd" type="Script" id=4]
[ext_resource path="res://Structures/Dummy/PlacementCollision.tscn" type="PackedScene" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/Smooth = false
shader_param/line_thickness = 0.0
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/pixel_size = 1
shader_param/highlight = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0
height = 16.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 7.0
height = 16.0

[node name="TargetDummy" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -13 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HitEffect" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 3 )

[node name="PlacementCollision" parent="." instance=ExtResource( 5 )]
disabled = true

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( 0, -13 )
shape = SubResource( 4 )
[connection signal="timeout" from="HitEffect" to="." method="_on_HitEffect_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="input_event" from="InteractArea" to="." method="_on_InteractArea_input_event"]
[connection signal="mouse_entered" from="InteractArea" to="." method="_on_InteractArea_mouse_entered"]
[connection signal="mouse_exited" from="InteractArea" to="." method="_on_InteractArea_mouse_exited"]

[editable path="Hurtbox"]
